--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,20 @@
+body {
+  padding: 0.5em;
+}
+
+.recipe-container {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -1em;
+}
+
 .recipe-card {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     transition: all 0.3s cubic-bezier(.25, .8, .25, 1);
     padding: 1em;
-    margin: 1em 0;
+    margin: 1em;
+    width: 400px;
+    max-width: 100%;
 }
 
 .recipe-card h2 {
